# psych-intake-brief

./: .gitignore  LICENSE  README.md  index.html  package.json  readme.md
.github/workflows/: release.yml
docs/: EMBEDDINGS_RESEARCH.md  VALUE_PROPOSITION.md  academic-style.css  generate-pdf.py
docs/diagrams/: diagram1.mmd  diagram2.mmd  diagram3.mmd  diagram4.mmd
docs/latex/: main.tex
public/examples/: example-biopsychosocial.txt  example-discharge-summary.txt  example-post-interview-note.txt  example-psych-eval.txt  examples.json
public/references/: DSM-V.md
public/templates/: intake-template.docx
scripts/: qa-screenshots.mjs
skills/psych-intake-preferences/: SKILL.md
src/: App.tsx  file-saver.d.ts  html2canvas.d.ts  index.css  mammoth.d.ts  pdfjs-dist.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: DiffView.tsx  FilePreviewModal.tsx  IssuesPanel.tsx  Markdown.tsx  SettingsModal.tsx  Toast.tsx  UsagePanel.tsx
src/contexts/: AppSettingsContext.tsx  CaseContext.tsx  ChatContext.tsx  UsageContext.tsx  index.ts
src/hooks/: useCase.ts  useChat.ts  useGeneration.ts  useTokenUsage.ts
src/lib/: caseStore.ts  chatStore.ts  dsm.ts  embeddings.ts  evidence.ts  exporters.ts  llm.ts  markdownToHtml.ts  openaiHelpers.ts  parser.ts  pdf.ts  storage.ts  template.ts  textUtils.ts  types.ts
