[package]
name = "psych-intake-brief"
version = "0.0.4"
description = "Psychiatric Intake Summarization Tool"
authors = ["Dr. Layth M Qassem PharmD MSACI"]
edition = "2021"

[lib]
name = "psych_intake_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true






